--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mode Server</a>
+                            <a class="nav-link" href="#">Program Belajar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Kenangan</a>
@@ -122,8 +122,8 @@
                     src="https://cdn.pixabay.com/photo/2016/11/14/05/15/academic-1822682_960_720.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
-                    <h5>Server Yang Lumayan menantang</h5>
-                    <p>Ayo Ajak kawanmu Bermain Di server<strong> CyberNet • Binjai.</strong></p>
+                    <h5>Methode Pembelajaran</h5>
+                    <p>Methode pembelajaran di<strong> Yayasan Irssadussaar </strong>sangat mudah di pahami, dengan para pengajar dan pengurus yang sudah profesional dalam mengajar murid - murid. </p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -131,8 +131,8 @@
                     src="https://cdn.pixabay.com/photo/2017/02/05/00/08/graduation-2038864_960_720.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
-                    <h5>Survival</h5>
-                    <p>Sekarang Kamu bisa memainkan Mode survival dan dapatkan badget supaya membeli enchant untuk mempercantik tampilan senjata kamu.</p>
+                    <h5>Hafalan Al-Qur'an</h5>
+                    <p>Program hafalan Al-Qur'an adalah satu kewajiban di ponpes ini, dan dalam program tersebut santri di ajarkan tentang cara menghafal dengan benar, dan dengan system RTJ(Rangkaian Tiga Juz).</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -140,8 +140,8 @@
                     src="https://cdn.pixabay.com/photo/2017/09/08/00/37/friend-2727305_960_720.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
-                    <h5>PvP Arena 1vs1</h5>
-                    <p>Akan Hadir juga Mode PvP arena 1vs1,di sebablan server dalam tahap pengembangan.</p>
+                    <h5>Guru Dan pengurus Ponpes</h5>
+                    <p>Guru dan para pengurus yang ahli dalam bidangnya sangat ramah dan berakhlakul karimah, jadi santri akan mengikuti jejak guru dan pengurusnya.</p>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
         <!-- ======= About Section ======= -->
         <section id="about" class="about mt-5">
             <div class="container-fluid">
-                <h2 class="h1-responsive font-weight-bold text-center my-2">Tentang Server</h2>
+                <h2 class="h1-responsive font-weight-bold text-center my-2">Visi Dan Misi</h2>
                 <!--Section description-->
                 <p class="text-center w-responsive mx-auto mb-1">Do you have any questions? Please do not hesitate to
                     contact us directly. Our team will come back to you within
@@ -503,7 +503,7 @@
 
             <!-- Copyright -->
             <div class="text-center py-4" style="background-color: rgba(0, 0, 0, 0.05);">
-                © 2021 Copyright:
+                © 2024 Copyright:
                 <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Arjuna.Inc</a>
             </div>
             <!-- Copyright -->
