--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                <i class="bi bi-gem me-3"></i>Company name
+                                <i class="bi bi-gem me-3"></i>Yayasan Irssadussari
                             </h6>
                             <p>
                                 Here you can use rows and columns to organize your footer content. Lorem ipsum
